tests/ui/reference_to_reference.stderr
error: Passing a reference to a reference is not supported
 --> $DIR/reference_to_reference.rs:5:20
  |
5 |         fn repro_c(t: &&ThingC);
  |                    ^^^^^^^^^^^

error: Passing a reference to a reference is not supported
 --> $DIR/reference_to_reference.rs:9:20
  |
9 |         fn repro_r(t: &&ThingR);
  |                    ^^^^^^^^^^^
